--- a/posts/closures.mdx
+++ b/posts/closures.mdx
@@ -3,7 +3,7 @@ title: Closures
 spoiler: What is closures, and how do they actually work?
 date: "2020-03-16"
 updated: "2020-03-16"
-tags: ["js"]
+tags: ["js", "fp"]
 keywords: ["wtf", "vip"]
 slug: js-closures
 ---
