--- a/posts/http.mdx
+++ b/posts/http.mdx
@@ -8,7 +8,7 @@ keywords: ["http", "servers"]
 slug: http
 ---
 
-## HTTP Request and Response
+<!-- ## HTTP Request and Response -->
 
 asdasdasds
 
